--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["wolf4ood <enrico.risa@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-
-
+broadcaster = { version = "1.0", optional = true }
 
 [dev-dependencies]
 futures-executor = "0.3.4"
 futures-util = "0.3.4"
+
+[features]
+multiple = ["broadcaster"]
