--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "countdownlatch-rs"
+name = "countdownlatch"
 version = "0.1.0"
 authors = ["wolf4ood <enrico.risa@gmail.com>"]
 edition = "2018"
@@ -11,6 +11,12 @@ broadcaster = { version = "1.0", optional = true }
 [dev-dependencies]
 futures-executor = "0.3.4"
 futures-util = "0.3.4"
+async-std = { version = "1.5.0", features = ["attributes"] }
 
 [features]
 multi = ["broadcaster"]
+
+
+[[example]]
+name = "async_std_multi"
+required-features = ["multi"]
