--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-broadcaster = { version = "1.0", optional = true }
+crossbeam = { version = "0.7.3", optional = true }
 
 [dev-dependencies]
 futures-executor = "0.3.4"
@@ -14,7 +14,7 @@ futures-util = "0.3.4"
 async-std = { version = "1.5.0", features = ["attributes"] }
 
 [features]
-multi = ["broadcaster"]
+multi = ["crossbeam"]
 
 
 [[example]]
