--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-
+piper = { version = "0.1" }
 
 [dev-dependencies]
 futures-executor = "0.3.4"
 futures-util = "0.3.4"
 async-std = { version = "1.5.0", features = ["attributes"] }
 
-[features]
-multi = []
-
-
-[[example]]
-name = "async_std_multi"
-required-features = ["multi"]
