--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,3 +43,12 @@ jobs:
             path-to-lcov: ${{ steps.coverage.outputs.report }}
             flag-name: test-${{ matrix.os }}
             parallel: true    
+  grcov_finalize:
+    runs-on: ubuntu-latest
+    needs: grcov
+    steps:
+      - name: Finalize Coveralls upload
+        uses: coverallsapp/github-action@v1.1.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
