--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,8 +26,8 @@ jobs:
             override: true
 
 
-      - name: Run cargo clean       
-      - uses: actions-rs/cargo@v1
+      - name: Run cargo clean 
+        uses: actions-rs/cargo@v1
         with:
           command: clean       
 
