--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 description= "Async CountDownLatch"
 repository = "https://github.com/wolf4ood/wait-for-me"
 keywords = ["async", "synchronization","countdown"]
-categories = ["Asynchronous"]
+categories = ["asynchronous"]
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
