--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 piper = { version = "0.1" }
+futures-timer="3.0"
+pin-project-lite = "0.1.4"
+futures="0.3"
 
 [dev-dependencies]
 futures-executor = "0.3.4"
