--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -42,6 +42,15 @@ jobs:
       - name: Run grcov
         id: coverage
         uses: actions-rs/grcov@0.2-proto
+        with:
+          args: >
+            -t lcov
+            --llvm
+            --branch
+            --ignore-not-existing
+            --ignore "/*"
+            -o ./target/lcov.info
+            ./target/debug/  # Note that you need to point grcov to the target directory with build artifacts
       - name: Coveralls upload
         uses: coverallsapp/github-action@v1.1.1
         with:
