--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-piper = { version = "0.1" }
+async-lock = "1.0"
 futures-timer="3.0"
 futures="0.3"
 
