--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ futures-timer="3.0"
 futures="0.3"
 
 [dev-dependencies]
-futures-executor = "0.3.29"
+futures-executor = { version = "0.3.29", features = ["thread-pool"] }
 futures-util = "0.3.29"
 async-std = { version = "1.12.0", features = ["attributes"] }
 tokio = { version = "1.34.0", features = ["full"] }
