--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,14 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-async-lock = "1.0"
+async-lock = "3.1"
 futures-timer="3.0"
 futures="0.3"
 
 [dev-dependencies]
-futures-executor = "0.3.4"
-futures-util = "0.3.4"
-async-std = { version = "1.5.0", features = ["attributes"] }
-tokio = { version = "0.2", features = ["full"] }
-smol = { version = "0.1" }
-smol-potat = { version = "0.2" }
-
-
+futures-executor = { version = "0.3.29", features = ["thread-pool"] }
+futures-util = "0.3.29"
+async-std = { version = "1.12.0", features = ["attributes"] }
+tokio = { version = "1.34.0", features = ["full"] }
+smol = { version = "1.3.0" }
+smol-potat = { version = "1.1.2" }
